# qt-hello-world

./: .gitignore  CMakeLists.txt  README.md
Resources/Calculator/: resources.qrc
Sources/Calculator/: CMakeLists.txt  CalculatorWindow.cpp  CalculatorWindow.h  CalculatorWindow.ui  Main.cpp
